...
        android:textAllCaps="true"
        android:textColor="@color/loginText"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/log_in_email_layout"/>

    <TextView
        android:id="@+id/log_in_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_heading"
...
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        android:textColorHint="@color/loginText"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/log_in_password_layout"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/log_in_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/log_in_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/loginText"
            android:textColorHint="@color/loginText"/>
...
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        android:textColorHint="@color/loginText"
        app:layout_constraintStart_toStartOf="@+id/log_in_email_layout"
        app:layout_constraintEnd_toEndOf="@+id/log_in_email_layout"
        app:layout_constraintTop_toBottomOf="@+id/log_in_email_layout"
        app:layout_constraintBottom_toTopOf="@+id/log_in_button">

        <EditText
            android:id="@+id/log_in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/log_in_password_hint"
            android:inputType="textPassword"
            android:textColor="@color/loginText"
            android:textColorHint="@color/loginText"/>
...
