...
    <string name="coin_marker_snippet">Value</string>
    <string name="log_out_prompt">Logged out!</string>

    <!-- LogInActivity -->

    <!-- Layout -->
    <string name="log_in_heading">Log In</string>
    <string name="log_in_email_hint">Email</string>
    <string name="log_in_password_hint">Password</string>
    <string name="log_in_button_text">Log In</string>
    <string name="log_in_create_account"><u>New to Coinz? Create an account!</u></string>

    <!-- Toasts -->
...
